--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home | Ikania</title>
+
+    <script type="text/javascript">
+    
+    window.location.replace("/csc.html");
+
+    </script>
+
 </head>
 <body>
     <h3>We're currently under construction. Contact the monkey at <a href="https://twitter.com/pysaqib" target="_blank">@pysaqib</a></h3>
