--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home | Ikania</title>
 
+    <meta property="og:image" content="assets/thumbnail.png">
+    <meta property="og:image:type" content="image/png">
+
     <script type="text/javascript">
     
     window.location.replace("/csc.html");
