--- a/csc.html
+++ b/csc.html
@@ -47,8 +47,8 @@
     <section id="listBlock">
 
             <div class="card">
-                    <h5 class="cardTitle">ENGLISH COMPOSITION AND COMPREHENSION (LAB)—C1</h5>
-                    <h6 class="classLoc">ENGLISH LAB - I</h6>
+                    <h5 class="cardTitle">ENGLISH COMPOSITION AND COMPREHENSION (LAB)</h5>
+                    <h6 class="classLoc">ENGLISH LAB - I & ENGLISH LAB - II</h6>
                 
                     <ol class="workList">
                         <li class="workItem">No assignments this week.</li>
@@ -105,11 +105,12 @@
             </div>
 
             <div class="card">
-                    <h5 class="cardTitle">English composition and comprehension—C1</h5>
-                    <h6 class="classLoc">Seminar Hall</h6>
+                    <h5 class="cardTitle">English composition and comprehension</h5>
+                    <h6 class="classLoc">Seminar Hall & CE-1</h6>
                 
                     <ol class="workList">
                         <li class="workItem">Read essays <i>Anxiety: Challenge by Another Name, Lucy and Her Friends, The End of Passwords</i>. Try to grasp the main idea for further discussion.</li>
+                        <li class="workItem note">No assignment was given to C-2</li>
                     </ol>
             </div>
 
