--- a/csc.html
+++ b/csc.html
@@ -42,7 +42,7 @@
     <h2>CS-C Assignment Schedule</h2>
     <h5 id="credit">Created By: <a href="https://instagram.com/notsaqib" target="_blank">Saqib Ali</a>—19L-0939—CS-C.
         <br/>
-        Updated: 27th August, 2019</h5>
+        Updated: 28th August, 2019</h5>
 
     <section id="listBlock">
 
@@ -70,7 +70,6 @@
                     <h6 class="classLoc">CS-8</h6>
                 
                     <ol class="workList">
-                        <li class="workItem">Write pseudo-code for a rock-paper-scissors program that takes two inputs i.e. rock and paper, and then returns the winning user.</li>
                         <li class="workItem">Homework 0 has been uploaded on WhatsApp group as well on https://sarimbaig.com/pf. Download the pdf, due by September 02, 2019.</li>
                     </ol>
             </div>
@@ -80,7 +79,7 @@
                     <h6 class="classLoc">CS-11</h6>
                 
                     <ol class="workList">
-                        <li class="workItem">Do problems 4.02, 4.03, 2, 3, 6, 7, 11, 13, & 14 from Chapter 4, <i>Fundamentals of Physics</i>.</li>
+                        <li class="workItem note">Quiz will be held on 4th September.</i>.</li>
                     </ol>
             </div>
 
