--- a/csc.html
+++ b/csc.html
@@ -91,7 +91,7 @@
                     <h6 class="classLoc">CS-3</h6>
                 
                     <ol class="workList">
-                        <li class="workItem">Do Question no. 5, 10, 16 from Exercise 1.2.</li>
+                        <li class="workItem">No assignments this week</li>
                         <li class="workItem note">Quiz will be held on 5th September.</li>
                     </ol>
             </div>
@@ -110,8 +110,9 @@
                     <h6 class="classLoc">Seminar Hall & CE-1</h6>
                 
                     <ol class="workList">
-                        <li class="workItem">Read essays <i>Anxiety: Challenge by Another Name, Lucy and Her Friends, The End of Passwords</i>. Try to grasp the main idea for further discussion.</li>
+                        <li class="workItem">Make a pair with your classmate and fill out the worksheets. The worksheets can be bought from the photocopier.</li>
                         <li class="workItem note">C1 students are advised to buy worksheets for the next class at the photocopier shop.</li>
+                        <li class="workItem note">C1 students are advised to buy books in hard copy at the latest.</li>
                         <li class="workItem note">No assignment was given to C-2</li>
                     </ol>
             </div>
