--- a/csc.html
+++ b/csc.html
@@ -107,7 +107,7 @@
 
             <div class="card">
                     <h5 class="cardTitle">English composition and comprehension</h5>
-                    <h6 class="classLoc">Seminar Hall & CE-1</h6>
+                    <h6 class="classLoc">E&M 16 and E&M 10</h6>
                 
                     <ol class="workList">
                         <li class="workItem">Make a pair with your classmate and fill out the worksheets. The worksheets can be bought from the photocopier.</li>
