Added FAST-NU Grade Calculator

--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
     <meta property="og:image" content="assets/thumbnail.png">
     <meta property="og:image:type" content="image/png">
 
-    <script type="text/javascript">
-    
-    window.location.replace("/csc.html");
-
-    </script>
-
 </head>
 <body>
-    <h3>We're currently under construction. Contact the monkey at <a href="https://twitter.com/pysaqib" target="_blank">@pysaqib</a></h3>
+    <a href="projects/fast-nu-course-grade-calculator/courseCalc.html">FAST-NU Course Grade Calculator</a>
 </body>
 </html>
