--- a/projects/fast-nu-course-grade-calculator/courseCalc.html
+++ b/projects/fast-nu-course-grade-calculator/courseCalc.html
@@ -11,15 +11,18 @@
 
     <link rel="stylesheet" type="text/css" href="css/index-style.css" />
 
+    <link rel="icon" href="favicon.png" type="img/png" />
+
 </head>
 <body>
     
     <div id="mainContainer">
 
         <div id="fieldLabel">Modified Count Average</div>
+        <div id="fieldLabel">Enter the average out of 100. If that is not available, just estimate.</div>
         <input id="MCA" type="number" class="txtField" placeholder="0 - 100" max="100" min="0"/>
 
-        <div id="fieldLabel">Absolutes</div>
+        <div id="fieldLabel">ENTER THE ABSOLUTES THAT YOU HAVE SECURED</div>
         <input id="abs" type="number" class="txtField" placeholder="0 - 100" max="100" min="0"/>
 
         <br/><br/>
@@ -35,6 +38,7 @@
 
         <br/><br/>
         <p style="text-align: center; width: 100%;font-size: 12px;">&copy; Saqib Ali</p>
+        <div style="text-align: center; width: 100%;font-size: 12px; padding-top: 15px;">This tool has been made in accordance of the new grading policy that was introduced by the management of FAST-NU for Spring 2020 Semester.</div>
 
     </div>
 
