--- a/projects/fast-nu-course-grade-calculator/courseCalc.html
+++ b/projects/fast-nu-course-grade-calculator/courseCalc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>FAST Grade Calculator by Saqib Ali</title>
+    <title>Grader by Saqib</title>
 
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/index-js.js" type="text/javascript"></script>
