Fixed Issue with MCA

--- a/projects/fast-nu-course-grade-calculator/courseCalc.html
+++ b/projects/fast-nu-course-grade-calculator/courseCalc.html
@@ -18,8 +18,9 @@
 
     <div id="mainContainer">
 
-        <h4> FAST-NU <br/> Grade Calculator</h4>
-        <h5> by Saqib Ali</h5>
+        <h4> IQR <br/> Grade Calculator</h4>
+        <h5> BY SAQIB ALI</h5>
+        <h5 style="font-size: 8px;">FAST-NU</h5>
 
         <!-- <div id="fieldLabel" style="padding-bottom: 10px;">Modified Count Average</div> -->
         <div id="fieldLabel">Enter the average out of 100. If that is not available, just estimate.</div>
