Added META Information

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <meta property="og:image" content="assets/thumbnail.png">
     <meta property="og:image:type" content="image/png">
 
+
+    <!-- Primary Meta Tags -->
+<title>Grader for FAST-NUCES by Saqib Ali</title>
+<meta name="title" content="Grader for FAST-NUCES by Saqib Ali">
+<meta name="description" content="Wonder what your grades would be under the new grading policy at FAST-NUCES? Try out this grader to get the best possible estimate with complete visualization and information.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ikania.github.io/projects/fast-nu-course-grade-calculator/courseCalc.html">
+<meta property="og:title" content="Grader for FAST-NUCES by Saqib Ali">
+<meta property="og:description" content="Wonder what your grades would be under the new grading policy at FAST-NUCES? Try out this grader to get the best possible estimate with complete visualization and information.">
+<meta property="og:image" content="Spring2020.PNG">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://ikania.github.io/projects/fast-nu-course-grade-calculator/courseCalc.html">
+<meta property="twitter:title" content="Grader for FAST-NUCES by Saqib Ali">
+<meta property="twitter:description" content="Wonder what your grades would be under the new grading policy at FAST-NUCES? Try out this grader to get the best possible estimate with complete visualization and information.">
+<meta property="twitter:image" content="Spring2020.PNG">
+
+
 </head>
 <body>
     <a href="projects/fast-nu-course-grade-calculator/courseCalc.html">FAST-NU Course Grade Calculator</a>
