--- a/projects/fast-nu-course-grade-calculator/courseCalc.html
+++ b/projects/fast-nu-course-grade-calculator/courseCalc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grader by Saqib</title>
+    <title>Grader for FAST-NUCES by Saqib Ali</title>
 
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/index-js.js" type="text/javascript"></script>
@@ -12,6 +12,28 @@
     <link rel="stylesheet" type="text/css" href="css/index-style.css" />
 
     <link rel="icon" href="favicon.png" type="img/png" />
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Grader for FAST-NUCES by Saqib Ali</title>
+    <meta name="title" content="Grader for FAST-NUCES by Saqib Ali">
+    <meta name="description" content="Wonder what your grades would be under the new grading policy at FAST-NUCES? Try out this grader to get the best possible estimate with complete visualization and information.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ikania.github.io/projects/fast-nu-course-grade-calculator/courseCalc.html">
+    <meta property="og:title" content="Grader for FAST-NUCES by Saqib Ali">
+    <meta property="og:description" content="Wonder what your grades would be under the new grading policy at FAST-NUCES? Try out this grader to get the best possible estimate with complete visualization and information.">
+    <meta property="og:image" content="../../Spring2020.PNG">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ikania.github.io/projects/fast-nu-course-grade-calculator/courseCalc.html">
+    <meta property="twitter:title" content="Grader for FAST-NUCES by Saqib Ali">
+    <meta property="twitter:description" content="Wonder what your grades would be under the new grading policy at FAST-NUCES? Try out this grader to get the best possible estimate with complete visualization and information.">
+    <meta property="twitter:image" content="../../Spring2020.PNG">
+
 
 </head>
 <body>
